#119 - New endpoints, refactor doc & improvements
